Refactored DI
