# docs/swagger.json
@@ -28,19 +28,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/getmecontroller.UserResponse"
+                            "$ref": "#/definitions/UserResponse"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     }
                 }
@@ -65,7 +65,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/signupcontroller.SignUpRequest"
+                            "$ref": "#/definitions/SignUpRequest"
                         }
                     }
                 ],
@@ -73,31 +73,31 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/signupcontroller.SignUpResponse"
+                            "$ref": "#/definitions/SignUpResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "409": {
                         "description": "Conflict",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "422": {
                         "description": "Unprocessable Entity",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     }
                 }
@@ -119,13 +119,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/statuscontroller.StatusResponse"
+                            "$ref": "#/definitions/StatusResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/ErrorResponse"
                         }
                     }
                 }
@@ -133,7 +133,7 @@
         }
     },
     "definitions": {
-        "api.ErrorResponse": {
+        "ErrorResponse": {
             "type": "object",
             "properties": {
                 "details": {
@@ -144,24 +144,7 @@
                 }
             }
         },
-        "getmecontroller.UserResponse": {
-            "type": "object",
-            "properties": {
-                "displayName": {
-                    "type": "string"
-                },
-                "email": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "signupcontroller.SignUpRequest": {
+        "SignUpRequest": {
             "type": "object",
             "required": [
                 "displayName",
@@ -184,7 +167,7 @@
                 }
             }
         },
-        "signupcontroller.SignUpResponse": {
+        "SignUpResponse": {
             "type": "object",
             "properties": {
                 "token": {
@@ -195,7 +178,7 @@
                 }
             }
         },
-        "statuscontroller.StatusResponse": {
+        "StatusResponse": {
             "type": "object",
             "properties": {
                 "buildDate": {
@@ -205,6 +188,23 @@
                     "type": "string"
                 },
                 "version": {
+                    "type": "string"
+                }
+            }
+        },
+        "UserResponse": {
+            "type": "object",
+            "properties": {
+                "displayName": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "username": {
                     "type": "string"
                 }
             }
